# emergent

./: .gitmodules  Cargo.toml  Makefile  README.md
.github/workflows/: main.yml  rust.yml
cache/: Cargo.toml
concept/: Cargo.toml
concept/src/: concept.rs  node.rs
config/: Cargo.toml
config/src/: configuration.rs  lib.rs  window_location.rs  window_placement.rs
drawing/: .gitignore  Cargo.toml
drawing/src/: chain.rs  drawing.rs  drawing_target.rs  fast_bounds.rs  functions.rs  geometry.rs  lib.rs  map_chain.rs  shape.rs  simple_layout.rs  skia_core.rs  toolbox.rs  transform_chain.rs  visualize.rs
drawing/src/drawing/: blend_mode.rs  clip.rs  color.rs  font.rs  paint.rs  transform.rs
drawing/src/drawing_target/: drawing.rs
drawing/src/geometry/: angle.rs  bounds.rs  conic.rs  extent.rs  fast_bounds.rs  matrix.rs  nearly.rs  outset.rs  vector.rs
drawing/src/shape/: arc.rs  line.rs  path.rs  point.rs  polygon.rs  rect.rs  rounded_rect.rs
drawing/src/skia_core/: cubic_clipper.rs  geometry.rs  path.rs  scalar.rs
emergent-cache/: Cargo.toml
emergent-cache/src/: lib.rs
emergent-concept/: Cargo.toml
emergent-concept/src/: main.rs
emergent-drawing/: Cargo.toml
emergent-drawing/src/: angle.rs  bounds.rs  canvas.rs  circle.rs  clip.rs  color.rs  conic.rs  degrees.rs  drawing.rs  drawing_target.rs  extent.rs  fast_bounds.rs  functions.rs  geometry.rs  image.rs  lib.rs  matrix.rs  outline.rs  outset.rs  paint.rs  path.rs  point.rs  polygon.rs  radians.rs  rect.rs  rounded_rect.rs  shape.rs  transform.rs  vector.rs
emergent-drawing/src/drawing/: color.rs  font.rs  paint.rs
emergent-drawing/src/drawing_target/: drawing.rs
emergent-drawing/src/geometry/: bounds.rs  conic.rs  extent.rs  fast_bounds.rs  matrix.rs  nearly.rs  outset.rs  radius.rs  vector.rs
emergent-drawing/src/shape/: arc.rs  circle.rs  line.rs  oval.rs  path.rs  point.rs  rect.rs  rounded_rect.rs  text.rs
emergent-layout/: Cargo.toml
emergent-layout/src/: constraints.rs  grid.rs  layout.rs  lib.rs  primitives.rs  span.rs  types.rs
emergent-layout/src/layout/: border.rs  constrain.rs  constrained.rs  grid.rs  rect.rs  text.rs
emergent-terminal/: Cargo.toml
emergent-terminal/src/: color_formatter.rs  color_schemes.rs  lib.rs  text_attributor.rs
emergent-terminal/src/config/: colors.rs
emergent-terminal/src/term/: color.rs
layout/: Cargo.toml
layout/src/: constraints.rs  layout.rs  measure.rs  prelude.rs  primitives.rs  span.rs
layout/src/layout/: border.rs  constrained.rs  rect.rs
presentation/: Cargo.toml
presentation/src/: drawing_presentation.rs  events.rs  lib.rs  presentation.rs  scope.rs
presenter/: Cargo.toml
presenter/src/: context.rs  data.rs  declarative.rs  gesture_recognizer.rs  hit_test.rs  host.rs  input_processor.rs  input_state.rs  interpolated.rs  lib.rs  presenter.rs  processor.rs  processor_record.rs  recognizer.rs  recognizer_record.rs  scoped_state.rs  scoped_store.rs  scoped_view.rs  state.rs  support.rs  transaction.rs  velocity.rs  view.rs  view_builder.rs
presenter/src/component/: list.rs
presenter/src/input_processor/: activator.rs  animator.rs  converge.rs  easing.rs  momentum.rs  move_threshold.rs  pan.rs  resistance.rs  subscriptions.rs  tap.rs  transaction.rs
presenter/src/recognizer/: animator.rs  bounce_back.rs  converge.rs  momentum.rs  mover.rs  pan.rs  resistance.rs  subscriptions.rs  tap.rs  transaction.rs
presenter/src/view/: scroll.rs  tab.rs
src/: app.rs  capture.rs  drawing.rs  drawing_target.rs  emergent.rs  frame.rs  framebuilder.rs  libtest.rs  main.rs  renderer.rs  skia.rs  skia_measure.rs  skia_renderer.rs  test_runner.rs  test_watcher.rs  view.rs  winit_window.rs
src/lib/: capture.rs  compiler_message.rs  frame.rs  hit_test.rs  lib.rs  libtest.rs  line_breaking.rs  move_predictor.rs  msg.rs  presentations.rs  skia.rs  test_capture.rs  test_runner.rs  ui.rs  ui_tests.rs  window_application.rs  window_msg.rs  winit_window.rs
src/lib/skia/: convert.rs  generation_cache.rs  measure.rs  path_support.rs  test_environment.rs  text.rs
terminal/: Cargo.toml
terminal/src/: ansi.rs  color_schemes.rs  config.rs  index.rs  lib.rs  text_attributor.rs
terminal/src/config/: colors.rs
terminal/src/term/: color.rs
ui/: Cargo.toml
ui/src/: component.rs  frame_layout.rs  lib.rs  measure.rs  render_context.rs  scope.rs  window.rs  window_msg.rs  winit_window.rs
view/: Cargo.toml
view/src/: change_set.rs  indexed.rs  lazy_map.rs  lib.rs  presentation.rs  view.rs
