[package]
name = "emergent"
version = "0.1.0"
authors = ["Armin Sander <armin@replicator.org>"]
edition = "2018"

[lib]
name = "emergent"
path = "src/lib/lib.rs"

[workspace]
exclude = ["rust-skia", "vulkano"]
members = [
  "emergent-cache",
  "emergent-drawing",
  "emergent-layout", 
  "emergent-concept",
  "emergent-terminal"
]

[dependencies]

# project local dependencies
tears = { path = "tears" }
emergent-drawing = { path = "emergent-drawing" }
emergent-terminal = { path = "emergent-terminal" }

# channels
crossbeam-channel = "0.3.8"

# skia
skia-safe = { path = "rust-skia/skia-safe", features = ["vulkan", "shaper"] }

# window & rendering
winit = "0.19"

# we need a custom vulkano build that sets the request Vulkan instance version
# to the same version as the physical device's version,
# because of the version consistency Skia expects.
vk-sys = { path = "vulkano/vk-sys" }
vulkano = { path = "vulkano/vulkano" }
vulkano-win = { path = "vulkano/vulkano-win" }
vulkano-shaders = { path = "vulkano/vulkano-shaders" }

#vulkano = "0.11.1"
#vulkano-win = "0.11.1"
#vulkano-shaders = "0.11.1"

# logging
log = "0.4.8"
env_logger = "0.6.2"

# serialization

serde = { version = "1.0.90", features = ["derive"] }
serde_json = "1.0.39"

# test runner

cargo = { git = "https://github.com/rust-lang/cargo.git", rev = "cacc3dba09b41c1f8ae34951c2ce95da416f8d4b" }
failure = "0.1.5"
shh = "1.0.0"
cargo_metadata = "0.8.1"

# test watcher

cargo-watch = "7.2.1"
clap = "2.33.0"
watchexec = "=1.10.1"

[replace]
# needed to parameterize the TestWatcher.
"watchexec:1.10.1" = { path = "watchexec" }

