[package]
name = "emergent"
version = "0.1.0"
authors = ["Armin Sander <armin@replicator.org>"]
edition = "2018"

[lib]
name = "emergent"
path = "src/lib/lib.rs"

[workspace]
exclude = ["rust-skia", "vulkano", "watchexec"]
members = [
  "config",
  "drawing",
  "layout",
  "presentation",
  "presenter",
  "terminal",
  "ui",
  "view"
]

[dependencies]

# project local dependencies
tears = { path = "tears" }
emergent-drawing = { path = "drawing" }
emergent-terminal = { path = "terminal" }
emergent-config = { path = "config" }
emergent-presentation = { path = "presentation" }
emergent-presenter = { path = "presenter" }
emergent-ui = { path = "ui" }
emergent-view = { path = "view" }

# channels
crossbeam-channel = "0.4"

# skia
skia-safe = { path = "rust-skia/skia-safe", features = ["vulkan", "textlayout"] }

# window & rendering
winit = { version = "0.21", features = ["serde"] }

# we need a custom vulkano build that sets the request Vulkan instance version
# to the same version as the physical device's version,
# because of the version consistency Skia expects.
vk-sys = { path = "vulkano/vk-sys" }
vulkano = { path = "vulkano/vulkano", version = "0.17" }
vulkano-win = { path = "vulkano/vulkano-win", version = "0.17" }
vulkano-shaders = { path = "vulkano/vulkano-shaders", version = "0.17" }

# logging
log = "0.4"
env_logger = "0.7"

# serialization

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# test runner

cargo = "0.42.0"
failure = "0.1"
shh = "1.0"
cargo_metadata = "0.9"

# test watcher

cargo-watch = "7.2"
clap = "2.33"
watchexec = "=1.10.3"
# for RawEvent that watchexec uses
notify = "4.0.12"


[patch.crates-io]
# needed to parameterize the TestWatcher.
watchexec = { path = "watchexec" }

