[package]
name = "emergent-drawing"
version = "0.1.0"
authors = ["Armin Sander <armin@replicator.org>"]
edition = "2018"

[lib]
doctest = false

[dependencies]
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0.39"
bitflags = "1.1.0"
half = { version = "1.5.0", features = ["serialize"] }
# see https://github.com/kardeiz/serde_tuple/issues/5
serde_tuple = { path = "../serde_tuple" }
replace_with = "0.1.5"

[dev-dependencies]
# for Contains testing
rand = "0.7.0"
