[package]
name = "emergent-presentation"
version = "0.1.0"
authors = ["Armin Sander <armin@replicator.org>"]
edition = "2018"

[dependencies]
emergent-drawing = { path = "../drawing" }
serde = { version = "1.0.100", features = ["derive"] }
# for event to msg serialization
ron = "0.5.1"
once_cell = "1.3.1"
